Fix: make site stretch over min 100vh

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,14 @@
 body {
     background-color: var(--off-white);
     font-family: 'Montserrat', sans-serif;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+}
+
+main {
+    flex: 1 0 auto;
 }
 
 h1, h2, h3, h4, h5, h6 {
